# fhir-hackathon

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  main.py  pyproject.toml
.github/workflows/: run-eps.yml
das/common/: finland.py
das/engine/: typed_dataframe.py
das/logger/: logger.py
data/: README.md
data/EPS/: Bundle-024a4bcd-eb55-47f5-9c03-2cdd000db119.json  Bundle-024a4bcd-eb55-47f5-9c03-2cdd000db119.xml  Bundle-02e95e7f-d508-49b1-b97b-35aef6776a66.json  Bundle-02e95e7f-d508-49b1-b97b-35aef6776a66.xml  Bundle-0831eb9c-d798-437e-bd0c-79864d633419.json  Bundle-0831eb9c-d798-437e-bd0c-79864d633419.xml  Bundle-12d62271-5bdd-4567-9d05-581f03e5fb98.json  Bundle-12d62271-5bdd-4567-9d05-581f03e5fb98.xml  Bundle-27dd6075-9ebc-4675-9517-163aaf97fdc2.json  Bundle-27dd6075-9ebc-4675-9517-163aaf97fdc2.xml  Bundle-2b753596-f833-423d-a0cb-c704fe9ad419.json  Bundle-2b753596-f833-423d-a0cb-c704fe9ad419.xml  Bundle-3264a0ef-1259-4ba4-b4e4-67371acddfe9.json  Bundle-3264a0ef-1259-4ba4-b4e4-67371acddfe9.xml  Bundle-3f901372-6cdb-4033-918a-7e45c704d619.json  Bundle-3f901372-6cdb-4033-918a-7e45c704d619.xml  Bundle-3f9971ea-8cb0-4d74-b56a-e13099460313.json  Bundle-3f9971ea-8cb0-4d74-b56a-e13099460313.xml  Bundle-4059f02d-9b86-42a0-b001-1ae013b53189.json  Bundle-4059f02d-9b86-42a0-b001-1ae013b53189.xml  Bundle-43a0b203-416d-4ae8-9fe2-73a47389f444.json  Bundle-43a0b203-416d-4ae8-9fe2-73a47389f444.xml  (+78 more)
docs/: blog-fhir-hackathon-2026.md  das.md
src/: __init__.py  constants.py  fhir_loader.py  gold_layer.py
tests/: conftest.py  test_silver_observations.py
(+66 files in other folders)
