[project]
name = "fhir-parser-demo"
version = "0.1.0"
description = "Parse FHIR Bundle JSON files into typed fhir.resources models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fhir-resources>=8.1.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "duckdb>=1.4.3",
    "holidays>=0.87",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pandera",
    "pyarrow>=22.0.0",
    "wrapt>=2.0.1",
    "auto-mix-prep>=0.2.0",
]

[dependency-groups]
test = [
    "setuptools",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

polars = [
    "polars",
]
notebook = [
    "marimo>=0.12.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.uv]
default-groups = ["test", "polars"]

[tool.marimo.runtime]
pythonpath = ["src"]
